tests/files/lexer_tests/should_fail/046.cmdr
// Missing backtick after command call
result = `echo;